--- a/NN2.ipynb
+++ b/NN2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9dbda13b90e693d75ba232e419057f98b4028dd15b501488839b56df6dfea43c"
+  "signature": "sha256:7efa63efb9d7f4c974c3cefff5750ae582d0d6c86b515a4212924a2ebc296158"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -100,12 +100,12 @@
       "pred = multilayer_perceptron(x, weights, biases)\n",
       "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(pred, y))\n",
       "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost)\n",
-      "\n"
+      "sess = tf.InteractiveSession()\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -116,7 +116,7 @@
       "    xy = getData(df)\n",
       "    init = tf.initialize_all_variables()\n",
       "\n",
-      "    sess = tf.InteractiveSession()\n",
+      "\n",
       "    sess.run(init)\n",
       "    for epoch in range(training_epochs):\n",
       "        avg_cost = 0.\n",
@@ -131,12 +131,47 @@
       "\n",
       "    correct_prediction = tf.equal(tf.argmax(pred,1), tf.argmax(y,1))\n",
       "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
-      "    return sess.run(accuracy,feed_dict={x: xy[2], y: xy[3]})"
+      "    return [sess.run(accuracy,feed_dict={x: xy[2], y: xy[3]}),sess]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#This is how you test an entry\n",
+      "r = Train()\n",
+      "test = [df.values[1,:-2]]\n",
+      "\n",
+      "print sess.run(pred ,feed_dict={x:test})\n",
+      "print sess.run(tf.nn.softmax(pred) ,feed_dict={x:test})\n",
+      "print 'pred:',sess.run(tf.argmax(pred,1) ,feed_dict={x:test}),'real',df.values[1,-1]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[ 3169.23046875  -708.69775391]]\n",
+        "[[ 1.  0.]]\n",
+        "pred: [0] real 0\n"
+       ]
+      }
+     ],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
